# drone_light_show_algorithms

./: Formation2.xlsx  Formation3.csv  drone_formation_adjusted.csv  drone_formations.xlsx  drone_formations_sphere_box.xlsx  drone_path_id.py  drone_positions.csv  drone_positions_700.xlsx  drone_text_formation.csv  final_output.xlsx  formation.py  formation1.xlsx  formation2.xlsx  formation3.xlsx  formation4.xlsx  formation_600_drones.xlsx  house.py  house_shape.csv  hungarian_results.xlsx  output.xlsx  pyproject.toml  text.py
analys/: plot_result_analyses.py
assignment/: auction.py  chungsda.py  ga.py
formation/: plot_formation.py  sae_uet_filtered.ply  sae_uet_surface.csv  sae_uet_surface.ply  text.py
path planning/: Untitled-1-fixed.ipynb  Untitled-1.ipynb  final_output.xlsx  main.py  plot_animation.py
